[package]
name = "eit-stream"
version = "0.2.2"
authors = ["Cesbo Developers Team"]
build = "src/build.rs"
edition = "2018"

[dependencies]
error-rules = "0.2"
chrono = "0.4"
jiff = "0.2.16"
config = { git = "ssh://git@github.com/cesbo/libconfig.git", branch = "master" }
udp = { git = "ssh://git@github.com/cesbo/libudp.git", branch = "master" }
mpegts = { git = "ssh://git@github.com/cesbo/libmpegts.git", branch = "master" }
epg = { git = "ssh://git@github.com/cesbo/libepg.git", branch = "master" }

[build-dependencies]
chrono = "0.4"

[features]
static = ["epg/static"]

[profile.release]
panic = "abort"
opt-level = 3
lto = true
